fix padding in FeaturedProduct on HomePage and align-item: justify in description on ProductPage

--- a/src/components/home/FeatureProduct.module.scss
+++ b/src/components/home/FeatureProduct.module.scss
@@ -26,6 +26,9 @@
     }
 }
 
+.row {
+    justify-content: space-between;
+}
 
 .name {
     line-height: 1.4;
