--- a/src/components/product/ProductDetail.module.scss
+++ b/src/components/product/ProductDetail.module.scss
@@ -87,6 +87,7 @@
     }
     & .desc {
         margin-top: 32px;
+        text-align: justify;
 
         & div {
             font-size: 18px;
